--- a/WeTravel/res/layout/hoofdmenu.xml
+++ b/WeTravel/res/layout/hoofdmenu.xml
@@ -2,11 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" 
-    android:background="#dddbd8">
+    android:background="@drawable/achtergrond">
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="fill_parent"
+        android:layout_width="320dp"
         android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
@@ -33,9 +33,9 @@
         android:id="@+id/informatie"
         android:layout_width="150dp"
         android:layout_height="50dp"
+        android:layout_alignLeft="@+id/registreren"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="62dp"
+        android:layout_marginBottom="81dp"
         android:src="@drawable/informatie" />
 
 </RelativeLayout>
