--- a/WeTravel/res/layout/inloggen.xml
+++ b/WeTravel/res/layout/inloggen.xml
@@ -11,6 +11,7 @@
 
     <ImageView
         android:id="@+id/imageView1"
+        android:contentDescription="logo"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:layout_alignParentLeft="true"
@@ -30,21 +31,31 @@
                 android:layout_height="wrap_content"
                 android:textColor="#372c24"
                 android:text="Email"/>
-          <EditText android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dip"
-                android:layout_marginBottom="20dip"
-                android:singleLine="true"/>
+
+          <EditText
+              android:id="@+id/email_edit"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginBottom="20dip"
+              android:layout_marginTop="5dip"
+              android:inputType="textEmailAddress"
+              android:singleLine="true" />
+
           <!--  Password Label -->
           <TextView android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textColor="#372c24"
                 android:text="Password"/>
-          <EditText android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dip"
-                android:singleLine="true"
-                android:password="true"/>
+
+          <EditText
+              android:id="@+id/password_edit"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginTop="5dip"
+              android:inputType="textPassword"
+              android:password="true"
+              android:singleLine="true" />
+
           <!-- Login button -->
           <Button android:id="@+id/btnLogin"
                 android:layout_width="fill_parent"
